Countries in place.

--- a/index.html
+++ b/index.html
@@ -2,13 +2,92 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <script src="https://d3js.org/d3.v4.min.js"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Adjacency Matric</title>
 </head>
 <body>
-  <svg></svg>
-  <script src="script.js"></script>
+  <div class="container">
+    <div class="row">
+      <h1>Love Interests</h1>
+      <h3>Which characteristics rank highest?</h3>
+    </div>
+    <div class="row">
+      <div class="col s3">
+        <div>German</div>
+      </div>
+      <div class="col s3">
+        <div>British</div>
+      </div>
+      <div class="col s3">
+        <div>Malaysian</div>
+      </div>
+      <div class="col s3">
+        <div>Hong Kong</div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s3">
+        <div>Filipino</div>
+      </div>
+      <div class="col s3">
+        <div>American</div>
+      </div>
+      <div class="col s3">
+        <div>Indonesian</div>
+      </div>
+      <div class="col s3">
+        <div>Singaporean</div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s3">
+        <div>Thai</div>
+      </div>
+      <div class="col s3">
+        <div>French</div>
+      </div>
+      <div class="col s3">
+        <div>Indian</div>
+      </div>
+      <div class="col s3">
+        <div>Australian</div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s3">
+        <div>Danish</div>
+      </div>
+      <div class="col s3">
+        <div>Swedish</div>
+      </div>
+      <div class="col s3">
+        <div>Finnish</div>
+      </div>
+      <div class="col s3">
+        <div>Vietnamese</div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s3">
+        <div>Egyptian</div>
+      </div>
+      <div class="col s3">
+        <div>UAE</div>
+      </div>
+      <div class="col s3">
+        <div>Arabian</div>
+      </div>
+      <div class="col s3">
+        <div>Norwegian</div>
+      </div>
+    </div>
+  </div>
+  <!-- <svg></svg> -->
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+  <!-- <script src="script.js"></script> -->
 </body>
 </html>
