Simplify the JS code.

--- a/index.html
+++ b/index.html
@@ -84,10 +84,14 @@
         <div>Norwegian</div>
       </div>
     </div>
+    <div class="row">
+      <div class="col s6">SOURCE | YouGov</div>
+      <div class='col s6'>DESIGN | @robcrock</div>
+    </div>
   </div>
-  <!-- <svg></svg> -->
+  <svg></svg>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-  <!-- <script src="script.js"></script> -->
+  <script src="script.js"></script>
 </body>
 </html>
