--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+  <link rel="stylesheet" href="style.css">
   <script src="https://d3js.org/d3.v4.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -17,22 +18,27 @@
     <div class="row">
       <div class="col s3">
         <div>German</div>
+        <svg class="german" height="200px" width="200px"></svg>
       </div>
       <div class="col s3">
         <div>British</div>
+        <svg class="british" height="200px" width="200px"></svg>
       </div>
       <div class="col s3">
         <div>Malaysian</div>
+        <svg class="malaysian" height="200px" width="200px">
+        </svg>
       </div>
       <div class="col s3">
         <div>Hong Kong</div>
+        <svg class="hong_kong" height="200px" width="200px"></svg>
       </div>
     </div>
     <div class="row">
       <div class="col s3">
         <div>Filipino</div>
       </div>
-      <div class="col s3">
+      <div class="col s3 american">
         <div>American</div>
       </div>
       <div class="col s3">
@@ -89,9 +95,8 @@
       <div class='col s6'>DESIGN | @robcrock</div>
     </div>
   </div>
-  <svg></svg>
+  <script src="script.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-  <script src="script.js"></script>
 </body>
 </html>
