--- a/index.html
+++ b/index.html
@@ -18,76 +18,92 @@
     <div class="row">
       <div class="col s3">
         <div>German</div>
-        <svg class="german" height="200px" width="200px"></svg>
+        <svg class="german" height="150px" width="150px"></svg>
       </div>
       <div class="col s3">
         <div>British</div>
-        <svg class="british" height="200px" width="200px"></svg>
+        <svg class="british" height="150px" width="150px"></svg>
       </div>
       <div class="col s3">
         <div>Malaysian</div>
-        <svg class="malaysian" height="200px" width="200px">
+        <svg class="malaysian" height="150px" width="150px">
         </svg>
       </div>
       <div class="col s3">
         <div>Hong Kong</div>
-        <svg class="hong_kong" height="200px" width="200px"></svg>
+        <svg class="hong_kong" height="150px" width="150px"></svg>
       </div>
     </div>
     <div class="row">
       <div class="col s3">
         <div>Filipino</div>
+        <svg class="filipino" height="150" width="150"></svg>
       </div>
-      <div class="col s3 american">
+      <div class="col s3">
         <div>American</div>
+        <svg class="american" height="150" width="150"></svg>
       </div>
       <div class="col s3">
         <div>Indonesian</div>
+        <svg class="indonesian" height="150" width="150"></svg>
       </div>
       <div class="col s3">
         <div>Singaporean</div>
+        <svg class="singaporean" height="150" width="150"></svg>
       </div>
     </div>
     <div class="row">
       <div class="col s3">
         <div>Thai</div>
+        <svg class="thai" height="150" width="150"></svg>
       </div>
       <div class="col s3">
         <div>French</div>
+        <svg class="french" height="150" width="150"></svg>
       </div>
       <div class="col s3">
         <div>Indian</div>
+        <svg class="indian" height="150" width="150"></svg>
       </div>
       <div class="col s3">
         <div>Australian</div>
+        <svg class="australian" height="150" width="150"></svg>
       </div>
     </div>
     <div class="row">
       <div class="col s3">
         <div>Danish</div>
+        <svg class="danish" height="150" width="150"></svg>
       </div>
       <div class="col s3">
         <div>Swedish</div>
+        <svg class="swedish" height="150" width="150"></svg>
       </div>
       <div class="col s3">
         <div>Finnish</div>
+        <svg class="finnish" height="150" width="150"></svg>
       </div>
       <div class="col s3">
         <div>Vietnamese</div>
+        <svg class="vietnamese" height="150" width="150"></svg>
       </div>
     </div>
     <div class="row">
       <div class="col s3">
         <div>Egyptian</div>
+        <svg class="egyptian" height="150" width="150"></svg>
       </div>
       <div class="col s3">
         <div>UAE</div>
+        <svg class="uae" height="150" width="150"></svg>
       </div>
       <div class="col s3">
         <div>Arabian</div>
+        <svg class="arabian" height="150" width="150"></svg>
       </div>
       <div class="col s3">
         <div>Norwegian</div>
+        <svg class="norwegian" height="150" width="150"></svg>
       </div>
     </div>
     <div class="row">
