Create a really fun grid key.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <script src="https://d3js.org/d3.v4.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -11,101 +11,109 @@
 </head>
 <body>
   <div class="container">
+
     <div class="row">
-      <h1>Love Interests</h1>
-      <h3>Which characteristics rank highest?</h3>
+      <div class="col s6">
+        <h3>Love Interests</h3>
+        <div>Which characteristics spark the hottest?</div>
+      </div>
+      <div class="col s6">
+        <svg class="key" height="90px" width="90px"></svg>
+      </div>
     </div>
+
     <div class="row">
       <div class="col s3">
         <div>German</div>
-        <svg class="german" height="150px" width="150px"></svg>
+        <svg class="german" height="90px" width="90px"></svg>
       </div>
       <div class="col s3">
         <div>British</div>
-        <svg class="british" height="150px" width="150px"></svg>
+        <svg class="british" height="90px" width="90px"></svg>
       </div>
       <div class="col s3">
         <div>Malaysian</div>
-        <svg class="malaysian" height="150px" width="150px">
+        <svg class="malaysian" height="90px" width="90px">
         </svg>
       </div>
       <div class="col s3">
         <div>Hong Kong</div>
-        <svg class="hong_kong" height="150px" width="150px"></svg>
+        <svg class="hong_kong" height="90px" width="90px"></svg>
       </div>
-    </div>
-    <div class="row">
       <div class="col s3">
         <div>Filipino</div>
-        <svg class="filipino" height="150" width="150"></svg>
+        <svg class="filipino" height="90" width="90"></svg>
       </div>
+    </div>
+
+    <div class="row">
       <div class="col s3">
         <div>American</div>
-        <svg class="american" height="150" width="150"></svg>
+        <svg class="american" height="90" width="90"></svg>
       </div>
       <div class="col s3">
         <div>Indonesian</div>
-        <svg class="indonesian" height="150" width="150"></svg>
+        <svg class="indonesian" height="90" width="90"></svg>
       </div>
       <div class="col s3">
         <div>Singaporean</div>
-        <svg class="singaporean" height="150" width="150"></svg>
+        <svg class="singaporean" height="90" width="90"></svg>
       </div>
-    </div>
-    <div class="row">
       <div class="col s3">
         <div>Thai</div>
-        <svg class="thai" height="150" width="150"></svg>
+        <svg class="thai" height="90" width="90"></svg>
       </div>
       <div class="col s3">
         <div>French</div>
-        <svg class="french" height="150" width="150"></svg>
+        <svg class="french" height="90" width="90"></svg>
       </div>
+    </div>
+
+    <div class="row">
       <div class="col s3">
         <div>Indian</div>
-        <svg class="indian" height="150" width="150"></svg>
+        <svg class="indian" height="90" width="90"></svg>
       </div>
       <div class="col s3">
         <div>Australian</div>
-        <svg class="australian" height="150" width="150"></svg>
+        <svg class="australian" height="90" width="90"></svg>
       </div>
-    </div>
-    <div class="row">
       <div class="col s3">
         <div>Danish</div>
-        <svg class="danish" height="150" width="150"></svg>
+        <svg class="danish" height="90" width="90"></svg>
       </div>
       <div class="col s3">
         <div>Swedish</div>
-        <svg class="swedish" height="150" width="150"></svg>
+        <svg class="swedish" height="90" width="90"></svg>
       </div>
       <div class="col s3">
         <div>Finnish</div>
-        <svg class="finnish" height="150" width="150"></svg>
-      </div>
-      <div class="col s3">
-        <div>Vietnamese</div>
-        <svg class="vietnamese" height="150" width="150"></svg>
+        <svg class="finnish" height="90" width="90"></svg>
       </div>
     </div>
     <div class="row">
       <div class="col s3">
+        <div>Vietnamese</div>
+        <svg class="vietnamese" height="90" width="90"></svg>
+      </div>
+      <div class="col s3">
         <div>Egyptian</div>
-        <svg class="egyptian" height="150" width="150"></svg>
+        <svg class="egyptian" height="90" width="90"></svg>
       </div>
       <div class="col s3">
         <div>UAE</div>
-        <svg class="uae" height="150" width="150"></svg>
+        <svg class="uae" height="90" width="90"></svg>
       </div>
       <div class="col s3">
         <div>Arabian</div>
-        <svg class="arabian" height="150" width="150"></svg>
+        <svg class="arabian" height="90" width="90"></svg>
       </div>
       <div class="col s3">
         <div>Norwegian</div>
-        <svg class="norwegian" height="150" width="150"></svg>
+        <svg class="norwegian" height="90" width="90"></svg>
       </div>
     </div>
+
     <div class="row">
       <div class="col s6">SOURCE | YouGov</div>
       <div class='col s6'>DESIGN | @robcrock</div>
