Legend is nearly complete.

--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
   <div class="container">
 
     <div class="row">
-      <div class="col s6">
-        <h3>Love Interests</h3>
-        <div>Which characteristics spark the hottest?</div>
+      <div class="col s8">
+        <h1>Love Interests</h1>
+        <div>Women around the world were asked to rank the characteristics listed along the right from 1 to 6.</div>
+        <br>
+        <div>Hover over a square to see what how each quality stacked up.</div>
       </div>
-      <div class="col s6">
-        <svg class="key" height="90px" width="90px"></svg>
+      <div class="col s4">
+        <svg class="key" height="175px" width="180px"></svg>
       </div>
     </div>
 
@@ -116,7 +118,7 @@
 
     <div class="row">
       <div class="col s6">SOURCE | YouGov</div>
-      <div class='col s6'>DESIGN | @robcrock</div>
+      <div class='col s6 right-align'>DESIGN | @robcrock</div>
     </div>
   </div>
   <script src="script.js"></script>
